--- a/packages/graphql/pubspec.yaml
+++ b/packages/graphql/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   gql_dedupe_link: ^2.0.3
   hive: ^2.1.0
   normalize: ^0.8.2
-  http: ^1.0.0
+  http: ^1.1.0
   collection: ^1.15.0
-  web_socket_channel: ^2.3.0
+  web_socket_channel: 2.4.0
   stream_channel: ^2.1.0
   rxdart: ^0.27.1
   uuid: ^3.0.1
