--- a/packages/graphql/pubspec.yaml
+++ b/packages/graphql/pubspec.yaml
@@ -1,27 +1,27 @@
 name: graphql
 description: A stand-alone GraphQL client for Dart, bringing all the features from a modern GraphQL client to one easy to use package.
-version: 5.2.0-beta.6
+version: 5.2.0-beta.8
 repository: https://github.com/zino-app/graphql-flutter/tree/main/packages/graphql
 issue_tracker: https://github.com/zino-hofmann/graphql-flutter/issues
 
 dependencies:
-  meta: 1.10.0
-  path: ^1.8.3
-  gql: ^1.0.0+1
-  gql_exec: ^1.0.0+1
-  gql_link: ^1.0.0+1
-  gql_http_link: ^1.0.1+1
+  meta: ^1.3.0
+  path: ^1.8.0
+  gql: ^1.0.0
+  gql_exec: ^1.0.0
+  gql_link: ^1.0.0
+  gql_http_link: ^1.0.0
   gql_transform_link: ^1.0.0
-  gql_error_link: ^1.0.0+1
-  gql_dedupe_link: ^2.0.3+1
-  hive: ^2.2.3
-  normalize: ^0.9.0
-  http: ^1.1.0
-  collection: 1.18.0
-  web_socket_channel: ^2.4.0
-  stream_channel: 2.1.2
-  rxdart: ^0.27.7
-  uuid: ^4.2.1
+  gql_error_link: ^1.0.0
+  gql_dedupe_link: ^2.0.3
+  hive: ^2.1.0
+  normalize: ^0.8.2
+  http: ^1.0.0
+  collection: ^1.15.0
+  web_socket_channel: '>=2.3.0 <=2.4.0'
+  stream_channel: ^2.1.0
+  rxdart: ^0.27.1
+  uuid: ^4.0.0
 
 dev_dependencies:
   async: ^2.5.0
